<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.LoginFragment"
    android:background="@color/primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            android:gravity="bottom"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/huge_text_size"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/userTextInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/user_label"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toTopOf="@+id/userTextInput"
            app:layout_constraintStart_toStartOf="@+id/userTextInput" />

        <EditText
            android:id="@+id/userTextInput"
            android:layout_width="236dp"
            android:layout_height="48dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/passwordTextInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/password_label"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toTopOf="@+id/passwordTextInput"
            app:layout_constraintStart_toStartOf="@id/passwordTextInput" />

        <EditText
            android:id="@+id/passwordTextInput"
            android:layout_width="236dp"
            android:layout_height="48dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userTextInput" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/forgot_password_text"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintStart_toStartOf="@id/passwordTextInput"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInput" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/login_button_white_circle_bg"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/googlelogo_foreground"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toEndOf="@+id/imageButton4"
            app:layout_constraintTop_toTopOf="@+id/imageButton4" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/login_button_white_circle_bg"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/facebooklogo_foreground"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/imageButton3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/login_button_white_circle_bg"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher_foreground"
            app:layout_constraintEnd_toStartOf="@+id/imageButton4"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toTopOf="@+id/imageButton4" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="236dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/gray"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/login_button_text"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInput" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_alternative_text"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/imageButton4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_account_text"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toTopOf="@+id/joinAsGuest"
            app:layout_constraintEnd_toStartOf="@+id/register"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

        <TextView
            android:id="@+id/joinAsGuest"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.05"
            android:gravity="top"
            android:layout_weight="1"
            android:text="@string/guest_text"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>