<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <ImageButton
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/homeAsUpIndicator" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mini_logo_bg"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/bigger_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/returnButton" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text_size"
            app:layout_constraintBottom_toTopOf="@+id/nameInput"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_gray_border"
            android:ems="10"
            android:inputType="text"
            android:paddingHorizontal="5dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/emailInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintWidth_percent="0.7" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_gray_border"
            android:ems="10"
            android:inputType="text|textEmailAddress"
            android:paddingHorizontal="5dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInput"
            app:layout_constraintWidth_percent="0.7" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_gray_border"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingHorizontal="5dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/passwordWarnText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="38dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="5dp"
            android:text="Password"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="@+id/passwordInput" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="38dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="5dp"
            android:text="Name"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/nameInput"
            app:layout_constraintStart_toStartOf="@+id/nameInput" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="38dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="5dp"
            android:text="Email"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/emailInput"
            app:layout_constraintStart_toStartOf="@+id/emailInput" />

        <TextView
            android:id="@+id/passwordWarnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_warning_text"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toTopOf="@+id/createButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />


        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/gray"
            android:text="@string/create_text"
            android:textColor="@color/bone"
            android:textSize="@dimen/big_text_size"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordWarnText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>